--- a/index.html
+++ b/index.html
@@ -4,9 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        <button>이번 주 당첨 확인</button>
+        <div>
+            <span>11</span>
+            <span>15</span>
+            <span>25</span>
+            <span>41</span>
+            <span>7</span>
+            <span>33</span>
+            <span>+</span>
+            <span>9</span>
+        </div>
+    </div>
+    <div>
+        <button>복권 구매</button>
+        <div>
+            <span>11</span>
+            <span>15</span>
+            <span>25</span>
+            <span>41</span>
+            <span>7</span>
+            <span>33</span>
+            <span>+</span>
+            <span>9</span>
+            <span>3등</span>
+        </div>
+        <div>
+            <span>11</span>
+            <span>15</span>
+            <span>25</span>
+            <span>41</span>
+            <span>7</span>
+            <span>33</span>
+            <span>+</span>
+            <span>9</span>
+            <span>꽝</span>
+        </div>
+        <div>
+            <span>11</span>
+            <span>15</span>
+            <span>25</span>
+            <span>41</span>
+            <span>7</span>
+            <span>33</span>
+            <span>+</span>
+            <span>9</span>
+            <span>2등</span>
+        </div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
