--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
         </div>
     </div>
     <script src="./script.js"></script>
+    <script src="./test_script.js"></script>
 </body>
 </html>
