Lotto ball style added

--- a/index.html
+++ b/index.html
@@ -8,56 +8,59 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <button>이번 주 당첨 확인</button>
+    <div class="lotto-wrapper">
         <div>
-            <span>11</span>
-            <span>15</span>
-            <span>25</span>
-            <span>41</span>
-            <span>7</span>
-            <span>33</span>
-            <span>+</span>
-            <span>9</span>
+            <button>이번 주 당첨 확인</button>
+            <div>
+                <span>11</span>
+                <span>15</span>
+                <span>25</span>
+                <span>41</span>
+                <span>7</span>
+                <span>33</span>
+                <span>+</span>
+                <span>9</span>
+            </div>
         </div>
-    </div>
-    <div>
-        <button>복권 구매</button>
-        <div>
-            <span>11</span>
-            <span>15</span>
-            <span>25</span>
-            <span>41</span>
-            <span>7</span>
-            <span>33</span>
-            <span>+</span>
-            <span>9</span>
-            <span>3등</span>
-        </div>
-        <div>
-            <span>11</span>
-            <span>15</span>
-            <span>25</span>
-            <span>41</span>
-            <span>7</span>
-            <span>33</span>
-            <span>+</span>
-            <span>9</span>
-            <span>꽝</span>
-        </div>
-        <div>
-            <span>11</span>
-            <span>15</span>
-            <span>25</span>
-            <span>41</span>
-            <span>7</span>
-            <span>33</span>
-            <span>+</span>
-            <span>9</span>
-            <span>2등</span>
+        <div class="picked-lotto-list">
+            <button>복권 구매</button>
+            <div>
+                <span>11</span>
+                <span>15</span>
+                <span>25</span>
+                <span>41</span>
+                <span>7</span>
+                <span>33</span>
+                <span>+</span>
+                <span>9</span>
+                <span>3등</span>
+            </div>
+            <div>
+                <span>11</span>
+                <span>15</span>
+                <span>25</span>
+                <span>41</span>
+                <span>7</span>
+                <span>33</span>
+                <span>+</span>
+                <span>9</span>
+                <span>꽝</span>
+            </div>
+            <div>
+                <span>11</span>
+                <span>15</span>
+                <span>25</span>
+                <span>41</span>
+                <span>7</span>
+                <span>33</span>
+                <span>+</span>
+                <span>9</span>
+                <span>2등</span>
+            </div>
         </div>
     </div>
     <script src="./script.js"></script>
+    <script src="./create_circle.js"></script>
     <script src="./test_script.js"></script>
 </body>
 </html>
