--- a/index.html
+++ b/index.html
@@ -5,62 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Lotto</title>
 </head>
 <body>
-    <div class="lotto-wrapper">
-        <div>
-            <button>이번 주 당첨 확인</button>
-            <div>
-                <span>11</span>
-                <span>15</span>
-                <span>25</span>
-                <span>41</span>
-                <span>7</span>
-                <span>33</span>
-                <span>+</span>
-                <span>9</span>
+    <div class="container">
+        <section class="lotto-result">
+            <div class="win-number"></div>
+            <div class="bonus-number"></div>
+        </section>
+        <section class="lotto-wrapper">
+
+        </section>
+        <section class="button-wrapper">
+            <div class="buttons">
+                <button id="check-winner" onclick="checkWinLotto()" disabled>이번 주 당첨 확인</button>
+                <button id="buy-lotto" onclick="addLottoNum()">복권 구매</button>
             </div>
-        </div>
-        <div class="picked-lotto-list">
-            <button>복권 구매</button>
-            <div>
-                <span>11</span>
-                <span>15</span>
-                <span>25</span>
-                <span>41</span>
-                <span>7</span>
-                <span>33</span>
-                <span>+</span>
-                <span>9</span>
-                <span>3등</span>
-            </div>
-            <div>
-                <span>11</span>
-                <span>15</span>
-                <span>25</span>
-                <span>41</span>
-                <span>7</span>
-                <span>33</span>
-                <span>+</span>
-                <span>9</span>
-                <span>꽝</span>
-            </div>
-            <div>
-                <span>11</span>
-                <span>15</span>
-                <span>25</span>
-                <span>41</span>
-                <span>7</span>
-                <span>33</span>
-                <span>+</span>
-                <span>9</span>
-                <span>2등</span>
-            </div>
-        </div>
+        </section>
     </div>
     <script src="./script.js"></script>
     <script src="./create_circle.js"></script>
-    <script src="./test_script.js"></script>
 </body>
 </html>
