--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="buttons">
                 <button id="check-winner" onclick="checkWinLotto()" disabled>이번 주 당첨 확인</button>
                 <button id="buy-lotto" onclick="addLottoNum()">복권 구매</button>
+                <button id="reset-btn" onclick="reset()">다시 하기</button>
             </div>
         </section>
     </div>
