--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </div>
         </section>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./script.js"></script>
     <script src="./create_circle.js"></script>
     <script src="./script.spec.js"></script>
